unpackaged/main/default/objects/Planning__c/Planning__c.object-meta.xml
<CustomObject>
    <label>Planning</label>
    <nameField>
        <label>Planning</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plannings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>