unpackaged/main/default/objects/Planning__c/fields/Accion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Accion_Formula__c</fullName>
    <formula>if( ISPICKVAL(Estatus__c, &#39;Aprobado&#39;) ,&#39;1&#39;,if( ISPICKVAL(Estatus__c, &#39;Rechazado&#39;),&#39;0&#39;,null) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acción</label>
    <type>Text</type>
</CustomField>