unpackaged/main/default/objects/Planning__c/fields/Dias_Extension__c.field-meta.xml
<CustomField>
    <fullName>Dias_Extension__c</fullName>
    <formula>Fecha_Fin__c - Fecha_Fin_Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días Extensión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>