unpackaged/main/default/objects/Planning__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>