unpackaged/main/default/objects/Planning__c/fields/Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin__c</fullName>
    <label>Fecha Fin</label>
    <type>Date</type>
</CustomField>