unpackaged/main/default/objects/Planning__c/fields/Fecha_Fin_Extension__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Extension__c</fullName>
    <label>Fecha Fin (Extensión)</label>
    <type>Date</type>
</CustomField>