unpackaged/main/default/objects/Planning__c/fields/Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio__c</fullName>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>