unpackaged/main/default/objects/Planning__c/fields/Nombre_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Solicitante__c</fullName>
    <label>Nombre Solicitante</label>
    <length>200</length>
    <type>Text</type>
</CustomField>