unpackaged/main/default/objects/Planning__c/fields/Periodo_Actual__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Actual__c</fullName>
    <label>Periodo Actual</label>
    <length>200</length>
    <type>Text</type>
</CustomField>