unpackaged/main/default/objects/Planning__c/recordTypes/Aprobacion_Listas_de_Bonificaciones.recordType-meta.xml
<RecordType>
    <fullName>Aprobacion_Listas_de_Bonificaciones</fullName>
    <active>true</active>
    <description>Aprobación Listas de Bonificaciones</description>
    <label>Aprobacion Listas de Bonificaciones</label>
</RecordType>