unpackaged/main/default/objects/Planning__c/recordTypes/Aprobacion_Listas_de_Financiamiento.recordType-meta.xml
<RecordType>
    <fullName>Aprobacion_Listas_de_Financiamiento</fullName>
    <active>true</active>
    <description>Aprobación Listas de Financiamiento</description>
    <label>Aprobacion Listas de Financiamiento</label>
</RecordType>