unpackaged/main/default/objects/Planning__c/recordTypes/Aprobacion_Listas_de_Precios.recordType-meta.xml
<RecordType>
    <fullName>Aprobacion_Listas_de_Precios</fullName>
    <active>true</active>
    <description>Aprobación Listas de Precios</description>
    <label>Aprobacion Listas de Precios</label>
</RecordType>