unpackaged/main/default/objects/Planning__c/recordTypes/Aprobacion_Listas_de_Precios_Batch.recordType-meta.xml
<RecordType>
    <fullName>Aprobacion_Listas_de_Precios_Batch</fullName>
    <active>true</active>
    <description>Aprobacion Listas de Precios Batch</description>
    <label>Aprobacion Listas de Precios Batch</label>
</RecordType>