unpackaged/main/default/objects/Planning__c/recordTypes/Aprobacion_Listas_de_Precios_Batch_Prods.recordType-meta.xml
<RecordType>
    <fullName>Aprobacion_Listas_de_Precios_Batch_Prods</fullName>
    <active>true</active>
    <description>Aprobación Listas de Precios Batch Prods</description>
    <label>Aprobacion Listas de Precios Batch Prods</label>
</RecordType>