unpackaged/main/default/objects/Planning__c/recordTypes/Bonificaciones_Batch.recordType-meta.xml
<RecordType>
    <fullName>Bonificaciones_Batch</fullName>
    <active>true</active>
    <description>Bonificaciones Batch</description>
    <label>Bonificaciones Batch</label>
</RecordType>