unpackaged/main/default/objects/Planning__c/recordTypes/Periodo_de_Venta.recordType-meta.xml
<RecordType>
    <fullName>Periodo_de_Venta</fullName>
    <active>true</active>
    <description>Periodo de Venta</description>
    <label>Periodo de Venta</label>
</RecordType>