unpackaged/main/default/objects/Planning__c/listViews/AEC_Planning.listView-meta.xml
<ListView>
    <fullName>AEC_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>AEC</label>
    <queue>AEC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>