unpackaged/main/default/objects/Planning__c/listViews/APC_Planning.listView-meta.xml
<ListView>
    <fullName>APC_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>APC</label>
    <queue>APC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>