unpackaged/main/default/objects/Planning__c/listViews/Colaborador_Javer_Programa_Instituciona_Planning.listView-meta.xml
<ListView>
    <fullName>Colaborador_Javer_Programa_Instituciona_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>Colaborador Javer (Programa Instituciona</label>
    <queue>Colaborador_Javer_Programa_Instituciona</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>