unpackaged/main/default/objects/Planning__c/listViews/Contador_General_Planning.listView-meta.xml
<ListView>
    <fullName>Contador_General_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>Contador General</label>
    <queue>Contador_General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>