unpackaged/main/default/objects/Planning__c/listViews/Contralor_Planning.listView-meta.xml
<ListView>
    <fullName>Contralor_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>Contralor</label>
    <queue>Contralor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>