unpackaged/main/default/objects/Planning__c/listViews/Coordinador_de_Cobranza_Post_Venta_Planning.listView-meta.xml
<ListView>
    <fullName>Coordinador_de_Cobranza_Post_Venta_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>Coordinador de Cobranza Post Venta</label>
    <queue>Coordinador_de_Cobranza_Post_Venta</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>