unpackaged/main/default/objects/Planning__c/listViews/Cuentas_por_Cobrar_Planning.listView-meta.xml
<ListView>
    <fullName>Cuentas_por_Cobrar_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>Cuentas por Cobrar</label>
    <queue>Cuentas_por_Cobrar</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>