unpackaged/main/default/objects/Planning__c/listViews/Director_de_Operaciones_Planning.listView-meta.xml
<ListView>
    <fullName>Director_de_Operaciones_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>Director de Operaciones</label>
    <queue>Director_de_Operaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>