unpackaged/main/default/objects/Planning__c/listViews/Director_General_Planning.listView-meta.xml
<ListView>
    <fullName>Director_General_Planning</fullName>
    <filterScope>Queue</filterScope>
    <label>Director General</label>
    <queue>Director_General</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>